# meme-bot

./: .dockerignore  Dockerfile  bot.py  fly.toml  meme_maker.py  pyproject.toml
meme-bot/: __main__.py  meme_maker.py
meme-bot/tests/: test_memes.py
