[project]
name = "meme-bot"
version = "0.1.0"
description = "A discord bot that generates memes based on conversation context"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py[voice]>=2.4.0",
    "logfire>=3.0.0",
    "pydantic>=2.10.4",
    "pydantic-ai>=0.0.18",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.6",
]
